# review-rating-prediction

./: Dockerfile  Makefile  README.md  pyproject.toml  renovate.json
configs/: model_config.yaml
data/raw/: goodreads_reviews_children.json
src/api/: main.py
src/data/: etl.py
src/features/: advanced_features.py  build_features.py  llm_features.py  semantic_features.py
src/models/: advanced_train.py  model_inference.py  model_monitoring.py  model_registry.py  optimized_semantic_train.py  semantic_llm_train.py  semantic_train.py  train.py
src/workflows/: train_flow.py
tests/integration/: test_mlflow_integration.py
tests/unit/: test_data.py  test_features.py  test_model_utilities.py
